<resources>
    <string name="app_name">GPSLoggerFlight</string>
    <string name="settings_screen_name">GPSLogger Settings</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="could_not_write_to_file">Could not write to file</string>
    <string name="description_added">Description added to file</string>
    <string name="not_yet">Not Yet</string>
    <string name="cant_add_description_until_next_point">You can\'t add a description until the next point has been
        logged to a file.
    </string>
    <string name="add_description">Add a description</string>
    <string name="letters_numbers">Use only letters and numbers</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_pexp">Export Settings</string>
    <string name="menu_pimp">Import Settings</string>
    <string name="menu_annotate">Annotate</string>
    <string name="menu_share">Share</string>
    <string name="menu_exit">Exit</string>
    <string name="ExportSuccess">Settings exported successfully</string>
    <string name="ExportFailed">Failed to export settings</string>
    <string name="ImportSuccess">Settings imported successfully</string>
    <string name="ImportFailed">Failed to import settings</string>
    <string name="AskFileName">Enter the file name without extension</string>
    <string name="ChooseFile">Choose file</string>
    <string name="SelectFile">Select file</string>
    <string name="Browse">Browse...</string>
    <string name="NoFSBrowser">No filesystem browser installed</string>
    <string name="FileExists">File already exists</string>
    <string name="AskAnotherFile">Please, enter another name</string>
    <string name="txt_latitude">Latitude:</string>
    <string name="txt_longitude">Longitude:</string>
    <string name="txt_altitude">Altitude:</string>
    <string name="txt_speed">Speed:</string>
    <string name="txt_direction">Direction:</string>
    <string name="txt_satellites">Satellites:</string>
    <string name="txt_accuracy">Accuracy:</string>
    <string name="txt_travel_distance">Travelled:</string>
    <string name="btn_start_logging">Start Logging</string>
    <string name="btn_stop_logging">Stop Logging</string>
    <string name="gpslogger_still_running">GPSLogger is still running.</string>
    <string name="summary_loggingto">Logging to:</string>
    <string name="summary_loggingto_screen">screen only</string>
    <string name="summary_freq_every">Frequency:</string>
    <string name="summary_freq_max">maximum</string>
    <string name="summary_dist">Distance:</string>
    <string name="summary_dist_regardless">maximum</string>
    <string name="summary_current_filename">File:</string>
    <string name="summary_current_filename_format">%s (in your GPSLogger folder)</string>
    <string name="altitude">Altitude</string>
    <string name="speed">Speed</string>
    <string name="direction">Direction</string>
    <string name="glideratio">Glide Ratio</string>
    <string name="sharing_location_only">Location only</string>
    <string name="sharing_pick_file">Pick a file to share</string>
    <string name="sharing_mylocation">My location</string>
    <string name="sharing_via">Share via</string>
    <string name="sharing_template_default">TS\nLATDD LONDD\nLATD LATMD LOND LONMD\nLATD LATM LATSD LOND LONM LONSD\nhttp://maps.google.com/maps?q=LATDD,LONDD</string>
    <string name="latitude_degree_decimal">LATDD</string>
    <string name="longitude_degree_decimal">LONDD</string>
    <string name="latitude_degree">LATD</string>
    <string name="longitude_degree">LOND</string>
    <string name="latitude_min_decimal">LATMD</string>
    <string name="longitude_min_decimal">LONMD</string>
    <string name="latitude_min">LATM</string>
    <string name="longitude_min">LONM</string>
    <string name="latitude_sec_decimal">LATSD</string>
    <string name="longitude_sec_decimal">LONSD</string>
    <string name="latitude_sec">LATS</string>
    <string name="longitude_sec">LONS</string>
    <string name="timestamp">TS</string>
    <string name="no_location">No location available</string>
    <string name="foot">&#160;foot</string>
    <string name="feet">&#160;feet</string>
    <string name="meter">&#160;meter</string>
    <string name="meters">&#160;meters</string>
    <string name="error">Error</string>
    <string name="error_connection">Connection Error. Please check your phone settings.</string>
    <string name="gpsprovider_unavailable">No GPS provider available. Please check your location settings and enable a
        location provider.
    </string>
    <string name="started">Started</string>
    <string name="providername_using">&#160;&#160;&#160;&#160;(Using %s)</string>
    <string name="providername_gps">GPS satellites</string>
    <string name="providername_celltower">cell towers</string>
    <string name="not_applicable">n/a</string>
    <string name="meters_per_second">&#160;m/s</string>
    <string name="feet_per_second">&#160;ft/s</string>
    <string name="miles_per_hour">&#160;mi/h</string>
    <string name="miles">&#160;mi</string>
    <string name="kilometers_per_hour">&#160;km/h</string>
    <string name="kilometers">&#160;km</string>
    <string name="unknown_direction">unknown</string>
    <string name="sorry">Sorry</string>
    <string name="success">Yay!</string>
    <string name="direction_roughly">Roughly %s</string>
    <string name="direction_north">North</string>
    <string name="direction_northnortheast">North by Northeast</string>
    <string name="direction_northeast">Northeast</string>
    <string name="direction_eastnortheast">East by Northeast</string>
    <string name="direction_east">East</string>
    <string name="direction_eastsoutheast">East by Southeast</string>
    <string name="direction_southeast">Southeast</string>
    <string name="direction_southsoutheast">South by Southeast</string>
    <string name="direction_south">South</string>
    <string name="direction_southsouthwest">South by Southwest</string>
    <string name="direction_southwest">Southwest</string>
    <string name="direction_westsouthwest">West by Southwest</string>
    <string name="direction_west">West</string>
    <string name="direction_westnorthwest">West by Northwest</string>
    <string name="direction_northwest">Northwest</string>
    <string name="direction_northnorthwest">North by Northwest</string>
    <string name="time_onesecond">1 second</string>
    <string name="time_halfminute">&#189; minute</string>
    <string name="time_oneminute">1 minute</string>
    <string name="time_onehour">1 hour</string>
    <string name="time_quarterhour">15 minutes</string>
    <string name="time_halfhour">&#189; hour</string>
    <string name="time_oneandhalfhours">1&#189; hours</string>
    <string name="time_twoandhalfhours">2&#189; hours</string>
    <string name="time_hms_format" formatted="false">%sh %sm %ss</string>
    <string name="accuracy_within" formatted="false">within %s %s</string>
    <string name="error_displaying">Error in displaying location info: %s</string>
    <string name="degree_symbol">&#176;</string>
    <string name="settings_distance_in_feet">Distance in feet</string>
    <string name="settings_enter_feet">Enter feet(max 9999)</string>
    <string name="settings_distance_in_meters">Distance in meters</string>
    <string name="settings_accuracy_in_meters">Accuracy in meters</string>
    <string name="settings_accuracy_in_feet">Accuracy in feet</string>
    <string name="settings_enter_meters">Enter meters(max 9999)</string>
    <string name="settings_converting_title">Converting…</string>
    <string name="settings_converting_description">Converting minimum distance units. Values above 9999 are reset to
        9999. The settings screen will now reload.
    </string>
    <string name="pref_pref_mode">Preference mode</string>
    <string name="pref_pref_mode_summary">Change from simple to advanced mode</string>
    <string name="pref_pref_mode_simple">Simple</string>
    <string name="pref_pref_mode_advanced">Advanced</string>
    <string name="pref_livetracker_title">Live tracker settings</string>
    <string name="pref_livetracker_summary">Select and configure live trackers</string>
    <string name="pref_loggers_catname">Loggers</string>
    <string name="pref_loggers_conf">Loggers settings</string>
    <string name="pref_logging_title">Logging details</string>
    <string name="log_gpx_title">Log to GPX</string>
    <string name="log_gpx_summary">Creates a GPX file in the GPSLogger folder on the SD card.</string>
    <string name="log_kml_title">Log to KML</string>
    <string name="log_kml_summary">Creates a KML file in the GPSLogger folder on the SD card.</string>
    <string name="log_plain_text_title">Log to Plain Text</string>
    <string name="log_plain_text_summary">Creates a plain text file in the GPSLogger folder on the SD card.</string>
    <string name="log_igc_title">Log to IGC</string>
    <string name="log_igc_summary">Creates an IGC file in the GPSLogger folder on the SD card.</string>
    <string name="new_file_creation_title">New file creation</string>
    <string name="new_file_creation_summary">Whether to create a new file once a day or each time you start.</string>
    <string name="new_file_creation_onceaday">Once a day</string>
    <string name="new_file_creation_everystart">Every time I start</string>
    <string name="new_file_creation_static">Fixed file</string>
    <string name="new_file_static_title">Static file name</string>
    <string name="new_file_static_summary">If you chose to create a fixed file, enter a custom file name</string>
    <string name="pref_performance_title">Performance</string>
    <string name="prefer_celltower_title">Prefer celltowers</string>
    <string name="prefer_celltower_summary">Uses celltowers rather than satellites. Less accurate, but saves more
        battery.
    </string>
    <string name="osm_resetauth">Clear authorization</string>
    <string name="osm_resetauth_summary">Remove the local authorization used to talk to your OSM account.</string>
    <string name="osm_visibility">Visibility</string>
    <string name="osm_visibility_summary">Set the visibility of your GPS Trace uploads</string>
    <string name="osm_description">Description</string>
    <string name="osm_description_summary">The description to use when uploading a trace</string>
    <string name="osm_tags">Tags</string>
    <string name="osm_tags_summary">The tags to apply when uploading a trace</string>
    <string name="btn_single_point">Log a single point</string>
    <string name="summary_autosend">Auto send:</string>
    <string name="skylines_enabled">Enable SkyLines</string>
    <string name="skylines_enabled_summary">Enable this SkyLines server.</string>
    <string name="skylines_server_category">SkyLines Settings</string>
    <string name="skylines_server">Server</string>
    <string name="skylines_server_summary">Hostname or IP</string>
    <string name="skylines_server_port">Port</string>
    <string name="skylines_server_default">78.47.50.46</string>
    <string name="skylines_server_port_default">5597</string>
    <string name="skylines_key">Your pilot private key</string>
    <string name="skylines_interval">Interval for sending data</string>
    <string name="skylines_interval_default">3</string>
    <string name="livetrack24_enabled">Enable livetrack24</string>
    <string name="livetrack24_enabled_summary">Enable this livetrack24 server.</string>
    <string name="livetrack24_server_category">livetrack24 Settings</string>
    <string name="livetrack24_server_url">Custom Server</string>
    <string name="livetrack24_server_url_summary">Custom submission URL</string>
    <string name="livetrack24_username">Username</string>
    <string name="livetrack24_password">Password</string>
    <string name="livetrack24_interval">Interval for sending data</string>
</resources>