<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
  xmlns:android="http://schemas.android.com/apk/res/android" android:key="osm_preferences">
  
 
	 <Preference android:key="osm_resetauth" android:summary="@string/osm_resetauth_summary" 
	 	android:title="@string/osm_resetauth"/>

	 <ListPreference android:key="osm_visibility"
		android:title="@string/osm_visibility"
        android:summary="@string/osm_visibility_summary"
		android:entries="@array/osm_visibility_choices"
        android:defaultValue="private"
		android:entryValues="@array/osm_visibility_choices" />
 
 	<EditTextPreference android:key="osm_description"
		android:title="@string/osm_description"
		android:summary="@string/osm_description_summary"
		android:dialogTitle="@string/osm_description"
        android:defaultValue=""/>
			
	<EditTextPreference android:key="osm_tags"
		android:title="@string/osm_tags"
		android:summary="@string/osm_tags_summary"
		android:dialogTitle="@string/osm_tags"
        android:defaultValue=""/>

</PreferenceScreen>
